initial expressServer setup

--- a/public/login.html
+++ b/public/login.html
@@ -3,12 +3,9 @@
 <head>
   <title>Saving doggos</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="home.js"></script>
 </head>
 <body>
-  <h1>Heading</h1>
+  <h1>Login below</h1>
   <p>Body</p>
-
-  <button onclick="clickFunction()">Click me</button>
 </body>
 </html>
