added action router and a base html template

--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,35 @@
-<!DOCTYPE>
-<html>
-<head>
-  <title>Saving doggos</title>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="home.js"></script>
-</head>
-<body>
-  <h1>Heading</h1>
-  <p>Body</p>
+<!DOCTYPE html>
 
-  <button onclick="clickFunction()">Click me</button>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+
+  <title>Home Page</title>
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="js/home.js"></script>
+  <link rel="stylesheet" href="css/main.css">
+
+</head>
+
+<body>
+
+  <div class="header">
+
+  </div>
+
+  <div id="loginContainer">
+    <div class="container-fluid">
+      <h1>Welcome to the app</h1>
+      <a href="/login"> Login </a>
+    </div>
+  </div>
+
+  <div class="footer">
+
+  </div>
+
 </body>
 </html>
