--- a/public/login.html
+++ b/public/login.html
@@ -1,11 +1,47 @@
-<!DOCTYPE>
-<html>
+<!DOCTYPE html>
+
+<html lang="en">
 <head>
-  <title>Saving doggos</title>
+  <meta charset="utf-8">
+
+  <title>Home Page</title>
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="js/login.js"></script>
+  <link rel="stylesheet" href="css/main.css">
+
 </head>
+
 <body>
-  <h1>Login below</h1>
-  <p>Body</p>
+
+  <div class="header">
+
+  </div>
+
+  <div id="loginContainer">
+    <div class="container-fluid">
+      <form class="loginForm">
+        <div class="form-group">
+          <label for="email">Email address:</label>
+          <input type="email" class="form-control" id="email">
+        </div>
+        <div class="form-group">
+          <label for="pwd">Password:</label>
+          <input type="password" class="form-control" id="pwd">
+        </div>
+        <div class="checkbox">
+          <label><input type="checkbox"> Remember me</label>
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>
+    </div>
+  </div>
+
+  <div class="footer">
+
+  </div>
+
 </body>
 </html>
