--- a/public/addDirector.html
+++ b/public/addDirector.html
@@ -4,13 +4,12 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Home Page</title>
+  <title>Add to Database</title>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script src="js/login.js"></script>
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="../css/main.css">
 
 </head>
 
@@ -22,7 +21,7 @@
 
   <div id="loginContainer">
     <div class="container-fluid">
-      <p>Add Director</p>
+      <div class="addToDB">
       <form class="loginForm">
         <div class="form-group">
           <label for="email">Email address:</label>
@@ -40,6 +39,7 @@
         <button type="submit" class="btn btn-default">Add Director</button>
       </form>
     </div>
+  </div>
   </div>
 
   <div class="footer">
