--- a/public/login.html
+++ b/public/login.html
@@ -22,14 +22,14 @@
 
   <div id="loginContainer">
     <div class="container-fluid">
-      <form class="loginForm">
+      <form class="loginForm" action="/performLogin" method="post">
         <div class="form-group">
           <label for="email">Email address:</label>
-          <input type="email" class="form-control" id="email">
+          <input type="email" class="form-control" id="email" name="user[email]">
         </div>
         <div class="form-group">
           <label for="pwd">Password:</label>
-          <input type="password" class="form-control" id="pwd">
+          <input type="password" class="form-control" id="pwd" name="user[password]">
         </div>
         <div class="checkbox">
           <label><input type="checkbox"> Remember me</label>
