--- a/public/addDirector.html
+++ b/public/addDirector.html
@@ -22,19 +22,19 @@
   <div id="loginContainer">
     <div class="container-fluid">
       <div class="addToDB">
-      <form class="loginForm">
+      <form class="loginForm" action="/addDirector">
         <div class="form-group">
           <label for="email">Email address:</label>
-          <input type="email" class="form-control" id="email">
+          <input type="email" class="form-control" id="director[email]">
         </div>
         <form class="loginForm">
           <div class="form-group">
             <label for="email">Username:</label>
-            <input type="text" class="form-control" id="username">
+            <input type="text" class="form-control" id="director[username]">
           </div>
         <div class="form-group">
           <label for="pwd">Password:</label>
-          <input type="password" class="form-control" id="pwd">
+          <input type="password" class="form-control" id="director[pwd]">
         </div>
         <button type="submit" class="btn btn-default">Add Director</button>
       </form>
