added seperate logins for directors and fosters

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
   <div id="loginContainer">
     <div class="container-fluid">
       <h1>Welcome to the app</h1>
-      <a href="/login"> Login </a>
+      <a href="/login"><h3>Login</h3></a>
     </div>
   </div>
 
