--- a/public/login.html
+++ b/public/login.html
@@ -6,18 +6,45 @@
 
   <title>Home Page</title>
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script src="js/login.js"></script>
   <link rel="stylesheet" href="css/main.css">
+  <script src="js/login.js"></script>
 </head>
 <body>
   <div class="header">
   </div>
   <div id="loginContainer">
     <div class="container-fluid">
-      <form class="loginForm" action="/performLogin" method="post">
+
+      <div class="row loginForm">
+        <div class="col-md-6">
+          <button id="fosterToggle" class="toggleButtonActive btn">Foster</button>
+        </div>
+        <div class="col-md-6">
+          <button id="directorToggle" class="toggleButtonInactive btn">Director</button>
+        </div>
+      </div>
+
+      <form id="directorLogin" class="loginForm" action="/performDirectorLogin" method="post">
+        <h2>Director Sign-in</h2>
+        <div class="form-group">
+          <label for="email">Email address:</label>
+          <input type="email" class="form-control" id="email" name="user[email]">
+        </div>
+        <div class="form-group">
+          <label for="pwd">Password:</label>
+          <input type="password" class="form-control" id="pwd" name="user[password]">
+        </div>
+        <div class="checkbox">
+          <label><input type="checkbox"> Remember me</label>
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>
+
+      <form id="fosterLogin" class="loginForm" action="/performFosterLogin" method="post">
+        <h2>Foster Sign-in</h2>
         <div class="form-group">
           <label for="email">Email address:</label>
           <input type="email" class="form-control" id="email" name="user[email]">
