successfully adding users to mongodb

--- a/public/addDirector.html
+++ b/public/addDirector.html
@@ -17,15 +17,15 @@
       <form class="loginForm" action="/addDirector" method="post">
         <div class="form-group">
           <label for="email">Email address:</label>
-          <input type="email" class="form-control" id="director[email]">
+          <input type="email" class="form-control" id="email" name="director[email]">
         </div>
           <div class="form-group">
             <label for="email">Username:</label>
-            <input type="text" class="form-control" id="director[username]">
+            <input type="text" class="form-control" id="username" name="director[username]">
           </div>
         <div class="form-group">
           <label for="pwd">Password:</label>
-          <input type="password" class="form-control" id="pwd" name="director[pwd]">
+          <input type="password" class="form-control" id="pwd" name="director[password]">
         </div>
         <button type="submit" class="btn btn-default">Add Director</button>
       </form>
