--- a/public/login.html
+++ b/public/login.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
 
   <title>Home Page</title>
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -19,10 +19,10 @@
     <div class="container-fluid">
 
       <div class="row loginForm">
-        <div class="col-md-6">
+        <div class="col-sm-6">
           <button id="fosterToggle" class="toggleButtonActive btn">Foster</button>
         </div>
-        <div class="col-md-6">
+        <div class="col-sm-6">
           <button id="directorToggle" class="toggleButtonInactive btn">Director</button>
         </div>
       </div>
@@ -40,7 +40,7 @@
         <div class="checkbox">
           <label><input type="checkbox"> Remember me</label>
         </div>
-        <button type="submit" class="btn btn-default">Submit</button>
+        <button type="submit" class="btn btn-default toggleButtonActive">Log In</button>
       </form>
 
       <form id="fosterLogin" class="loginForm" action="/performFosterLogin" method="post">
@@ -56,7 +56,7 @@
         <div class="checkbox">
           <label><input type="checkbox"> Remember me</label>
         </div>
-        <button type="submit" class="btn btn-default">Submit</button>
+        <button type="submit" class="btn btn-default toggleButtonActive">Log In</button>
       </form>
     </div>
   </div>
