implemented template engine and updated front end

--- a/public/viewDirectors.html
+++ b/public/viewDirectors.html
@@ -6,14 +6,12 @@
 
   <title>Home Page</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <script src="js/home.js"></script>
   <link rel="stylesheet" href="css/main.css">
-
+  <script src="js/viewDirectors.js"></script>
 </head>
-
 <body>
 
   <nav class="navbar navbar-inverse navbar-static-top">
@@ -39,20 +37,45 @@
     </div>
   </nav>
 
-  <div id="loginContainer">
+  <div id="viewDirectorsContainer">
     <div class="container-fluid">
-      <h1>Welcome to the app</h1>
-      <div class="panel panel-default">
-        <div class="panel-body">
-          <a href="/login"><h3>Login</h3></a>
+
+    <div class="row">
+      <div class="col-md-12">
+        <h1>View Directors</h1><br/>
+      </div>
+    </div>
+
+    <formm>
+      <div class="form-group">
+        <div class="row">
+          <div class="col-md-2 col-md-offset-8">
+            <input type="text" class="form-control" id="directorSearch" name="search">
+          </div>
+          <div class="col-md-2">
+            <button type="submit" class="btn btn-default toggleButtonActive">Search</button>
+          </div>
         </div>
       </div>
+    </form>
+
+      <div class="row">
+        <div class="col-md-4">
+          <div class="panel panel-default">
+            <div class="panel-body tile">
+              <h2 class="name">Pepe Roni</h2>
+              <h4 class="address">1583 Regent St.</h4>
+              <h4 class="phone">(306)737-0749</h4>
+            </div>
+          </div>
+        </div>
+
     </div>
   </div>
 
+  <div class="footer">
 
-    <div class="footer navbar-fixed-bottom">
-    </div>
+  </div>
 
 </body>
 </html>
